2003-08-11  Alexandre Duret-Lutz  <adl@gnu.org>
	* configure.in: Modernize calls to AC_INIT, AM_INIT_AUTOMAKE and
	AC_OUTPUT.  Require Autoconf >= 2.57 and Automake >= 1.6.3.
	Remove many superfluous AC_SUBSTs.

2003-08-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FilterEditor.py: support for selecting a person
	from a list to get the GRAMPS ID value
	* src/plugins/FilterEditor.py: handle Add/Edit of rules correctly
	* src/rule.glade: eliminate unneeded label and increased size

2003-08-10  Tim Waugh  <twaugh@redhat.com>
	* configure.in: Use 0.CVS[date] for RELEASE.  '-' is not allowed in
	RPM release strings, and prefixing with '0.' allows the final version
	to be version-compared as newer.

2003-08-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: Support for categories and descriptions
	for filters
	* src/Plugins.py: removed unused variable
	* src/gramps.desktop: compatible with desktop-file-validate
	* src/rule.glade: new add/edit filter dialog
	* src/plugins/FilterEditor.py: support for spin buttons and new
	dialog box

2003-08-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/TextDoc.py (PaperStyle.set_height, PaperStyle.set_width): 
	Add functions. Needed for setting custom size paper. 
	* configure.in: Set RELEASE to CVS-<date> string. 

2003-08-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PaperMenu.py: Add A3 size to the default size list.
	* src/plugins/FamilyGroup.py: Remove setup() call.
	* src/plugins/IndivSummary.py: Enable translation for an event type. 
	* src/plugins/FtmStyleAncestors.py: Space after full stop. 
	* src/const.py.in (display_pevent): Try translating string if not 
	found in the _pe_e2l dictionary. Useful for translating Birth and 
	Death events which are not in the dictionary as non-editable events. 
	Seems harmless in the display function ;
	(display_fevent, display_event, display_pattr, display_fattr, 
	display_attr, display_frel): Likewise. Might be useful in some 