@@ -566,7 +566,7 @@ class FamilyView:
     def nameof(self,l,p,mode):
         if p:
             n = GrampsCfg.nameof(p)
-            return _("%s: %s\n\tRelationship: %s") % (l,n,mode)
+            return _("%s: %s\n\tRelationship: %s") % (l,n,_(mode))
         else:
             return _("%s: unknown") % (l)
 
